--- a/DS_Week3.Rmd
+++ b/DS_Week3.Rmd
@@ -12,7 +12,7 @@ output:
 
 
 ```{r setup, include=FALSE}
-#knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
 ```
 
 ```{r libraries}
@@ -380,6 +380,18 @@ The table allows us to see what day of the week each client type uses the statio
 This problem uses the data from the Tidy Tuesday competition this week, `kids`. If you need to refresh your memory on the data, read about it [here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-09-15/readme.md). 
 
   21. In this exercise, you are going to try to replicate the graph below, created by Georgios Karamanis. I'm sure you can find the exact code on GitHub somewhere, but **DON'T DO THAT!** You will only be graded for putting an effort into this problem. So, give it a try and see how far you can get without doing too much googling. HINT: use `facet_geo()`. The graphic won't load below since it came from a location on my computer. So, you'll have to reference the original html on the moodle page to see it.
+
+```{r}
+#kids %>% 
+  #filter(variable == "lib") %>% 
+  #mutate(child1000inf_adj = raw * inf_adj_perchild) %>% 
+  #pivot_wider(id_cols = year,  # I realized after I had been trying for a while that I should be using pivot longer
+              #names_from = state,
+              #values_from = child1000inf_adj) %>% 
+  #ggplot(aes(y = child1000inf_adj, x = year)) +
+  #geom_line() +
+  #facet_geo()
+```
 
 
 **DID YOU REMEMBER TO UNCOMMENT THE OPTIONS AT THE TOP?**
